Ajustes nos icones

--- a/views/Login/login.html
+++ b/views/Login/login.html
@@ -49,7 +49,7 @@
                 <div class="frame-18">
                     <input class="search-for-anything" type="text" placeholder="Search for anything...">
                     <div>
-                        <img class="icon_pesquisa" src="/Projeto_Final/Details/lupa.png" width="20" height="20">
+                        <img class="icon_pesquisa" src="lupa.png" width="20" height="20">
                     </div>
                 </div>
                 <div class="icons">
@@ -118,7 +118,7 @@
                     <div class="order-id">
                         <div class="box_olho">
                             <label class="password">Password</label>
-                            <img class="olho" src="/Projeto_Final/Tela_Login/visivel.png" width="15" height="15">
+                            <img class="olho" src="visivel.png" width="15" height="15">
                         </div>
                         <input class="input-field" type="password">
                     </div>
