--- a/views/Login/login.html
+++ b/views/Login/login.html
@@ -19,24 +19,11 @@
                         <div class="follow-us2">Follow us:</div>
                         <div class="social-icon">
                             <img class="twitter" src="twitter0.svg" />
-                            <img class="facebook" src="facebook0.svg" />
+                            <a href="https://www.facebook.com/?locale=pt_BR"><img class="facebook" src="facebook.png" /></a>
                             <img class="pinterest" src="pinterest0.svg" />
                             <img class="reddit" src="reddit0.svg" />
                             <img class="youtube" src="youtube0.svg" />
                             <img class="instagram" src="instagram0.svg" />
-                        </div>
-                    </div>
-                    <div class="line-1"></div>
-                    <div class="multi-language-drodpwon">
-                        <div class="dropdown">
-                            <div class="eng">Eng</div>
-                            <img class="regular-caret-down" src="regular-caret-down0.svg" />
-                        </div>
-                    </div>
-                    <div class="multi-currency-dropdown">
-                        <div class="dropdown">
-                            <div class="usd">USD</div>
-                            <img class="regular-caret-down2" src="regular-caret-down1.svg" />
                         </div>
                     </div>
                 </div>
@@ -70,25 +57,25 @@
                 <div class="left-side">
                     <div class="category">
                         <div class="button">
-                            <div class="label">All Category</div>
+                            <a href="#" class="label">All Category</a>
                             <img class="regular-caret-down3" src="regular-caret-down2.svg" />
                         </div>
                     </div>
                     <div class="track-order">
                         <img class="regular-map-pin-line" src="regular-map-pin-line0.svg" />
-                        <div class="track-order2">Track Order</div>
+                        <a href="#" class="track-order2">Track Order</a>
                     </div>
                     <div class="compare">
                         <img class="duotone-arrows-counter-clockwise" src="duotone-arrows-counter-clockwise0.svg" />
-                        <div class="compare2">Compare</div>
+                        <a href="#" class="compare2">Compare</a>
                     </div>
                     <div class="customer-support">
                         <img class="regular-headphones" src="regular-headphones0.svg" />
-                        <div class="customer-support2">Customer Support</div>
+                        <a href="#" class="customer-support2">Customer Support</a>
                     </div>
                     <div class="need-help">
                         <img class="regular-info" src="regular-info0.svg" />
-                        <div class="need-help2">Need Help</div>
+                        <a href="#" class="need-help2">Need Help</a>
                     </div>
                 </div>
                 <div class="call-now">
@@ -100,9 +87,9 @@
         <div class="breadcrumb">
             <div class="breadcumb">
                 <img class="regular-house" src="regular-house0.svg" />
-                <div class="home">Home</div>
+                <a href="#" class="home">Home</a>
                 <img class="regular-caret-right" src="regular-caret-right0.svg" />
-                <div class="shop-grid">User Account</div>
+                <a href="#" class="shop-grid">User Account</a>
                 <img class="regular-caret-right2" src="regular-caret-right1.svg" />
                 <a href="#" class="behicle-accessories">Sign In</a>
             </div>
@@ -123,9 +110,8 @@
                         <input id="input_senha" class="input-field" type="password" required>
                     </div>
                 </div>
-                <div class="button2">
-                    <button class="label2">Sign in</button>
-                    <img class="regular-arrow-right" src="regular-arrow-right0.svg" />
+                <div>
+                    <button class="button2">Sign in</button>
                 </div>
                 <div class="or-login-with">
                     <div class="don-t-have-account">
@@ -135,21 +121,21 @@
                         </div>
                     </div>
                     <div class="login-register-with">
-                        <div class="login-with-google">Login with Google</div>
+                        <a href="#" class="login-with-google">Login with Google</a>
                         <img class="google" src="google0.png" />
                     </div>
                     <div class="login-register-with">
-                        <div class="login-with-apple">Login with Apple</div>
+                        <a href="#" class="login-with-apple">Login with Apple</a>
                         <img class="apple" src="apple0.svg" />
                     </div>
                 </div>
                 <div class="line-29"></div>
                 <div class="tab">
                     <div class="tab2">
-                        <div class="sign-in">Sign In</div>
+                        <a href="#" class="sign-in">Sign In</a>
                     </div>
                     <div class="tab3">
-                        <div class="sign-in2">Sign Up</div>
+                        <a href="#" class="sign-in2">Sign Up</a>
                     </div>
                 </div>
             </form>
@@ -164,38 +150,38 @@
                     <div class="contact-info">
                         <div class="phone-number">
                             <div class="customer-supports">Customer Supports:</div>
-                            <div class="_629-555-0129">(629) 555-0129</div>
+                            <a href="#" class="_629-555-0129">(629) 555-0129</a>
                         </div>
                         <div class="_4517-washington-ave-manchester-kentucky-39495">
                             4517 Washington Ave. Manchester, Kentucky 39495
                         </div>
-                        <div class="info-kinbo-com">info@kinbo.com</div>
+                        <a href="#" class="info-kinbo-com">info@kinbo.com</a>
                     </div>
                 </div>
                 <div class="top-category">
                     <div class="top-category2">Top Category</div>
                     <div class="item">
                         <div class="footer-links">
-                            <div class="electronics">Computer &amp; Laptop</div>
+                            <a href="#" class="electronics">Computer &amp; Laptop</a>
                         </div>
                         <div class="footer-links">
-                            <div class="electronics">SmartPhone</div>
+                            <a href="#" class="electronics">SmartPhone</a>
                         </div>
                         <div class="footer-links">
-                            <div class="electronics">Headphone</div>
+                            <a href="#" class="electronics">Headphone</a>
                         </div>
                         <div class="footer-links">
                             <div class="devider"></div>
                             <div class="electronics2">Accessories</div>
                         </div>
                         <div class="footer-links">
-                            <div class="electronics">Camera &amp; Photo</div>
+                            <a href="#" class="electronics">Camera &amp; Photo</a>
                         </div>
                         <div class="footer-links">
-                            <div class="electronics">TV &amp; Homes</div>
+                            <a href="#" class="electronics">TV &amp; Homes</a>
                         </div>
                         <div class="button3">
-                            <div class="browse-all-product">Browse All Product</div>
+                            <a href="#" class="browse-all-product">Browse All Product</a>
                             <img class="regular-arrow-right2" src="regular-arrow-right1.svg" />
                         </div>
                     </div>
@@ -204,25 +190,25 @@
                     <div class="quick-links2">Quick links</div>
                     <div class="item">
                         <div class="footer-links">
-                            <div class="electronics">Shop Product</div>
+                            <a href="#" class="electronics">Shop Product</a>
                         </div>
                         <div class="footer-links">
-                            <div class="electronics">Shoping Cart</div>
+                            <a href="#" class="electronics">Shoping Cart</a>
                         </div>
                         <div class="footer-links">
-                            <div class="electronics">Wishlist</div>
+                            <a href="#" class="electronics">Wishlist</a>
                         </div>
                         <div class="footer-links">
-                            <div class="electronics">Compare</div>
+                            <a href="#" class="electronics">Compare</a>
                         </div>
                         <div class="footer-links">
-                            <div class="electronics">Track Order</div>
+                            <a href="#" class="electronics">Track Order</a>
                         </div>
                         <div class="footer-links">
-                            <div class="electronics">Customer Help</div>
+                            <a href="#" class="electronics">Customer Help</a>
                         </div>
                         <div class="footer-links">
-                            <div class="electronics">About Us</div>
+                            <a href="#" class="electronics">About Us</a>
                         </div>
                     </div>
                 </div>
@@ -235,7 +221,7 @@
                             </div>
                             <div class="info">
                                 <div class="get-it-now">Get it now</div>
-                                <div class="google-play">Google Play</div>
+                                <a href="#" class="google-play">Google Play</a>
                             </div>
                         </div>
                         <div class="mobile-app">
@@ -244,7 +230,7 @@
                             </div>
                             <div class="info">
                                 <div class="get-it-now">Get it now</div>
-                                <div class="app-store">App Store</div>
+                                <a href="#" class="app-store">App Store</a>
                             </div>
                         </div>
                     </div>
@@ -254,49 +240,49 @@
                     <div class="tag">
                         <div class="row">
                             <div class="tag2">
-                                <div class="cooking">Game</div>
+                                <a href="#" class="cooking">Game</a>
                             </div>
                             <div class="tag2">
-                                <div class="cooking">iPhone</div>
+                                <a href="#" class="cooking">iPhone</a>
                             </div>
                             <div class="tag2">
-                                <div class="cooking">TV</div>
+                                <a href="#" class="cooking">TV</a>
                             </div>
                             <div class="tag2">
-                                <div class="cooking">Asus Laptops</div>
+                                <a href="#" class="cooking">Asus Laptops</a>
                             </div>
                         </div>
                         <div class="row">
                             <div class="tag2">
-                                <div class="cooking">Macbook</div>
+                                <a href="#" class="cooking">Macbook</a>
                             </div>
                             <div class="tag2">
-                                <div class="cooking">SSD</div>
+                                <a href="#" class="cooking">SSD</a>
                             </div>
                             <div class="tag3">
-                                <div class="cooking">Graphics Card</div>
+                                <a href="#" class="cooking">Graphics Card</a>
                             </div>
                         </div>
                         <div class="row">
                             <div class="tag2">
-                                <div class="cooking">Power Bank</div>
+                                <a href="#" class="cooking">Power Bank</a>
                             </div>
                             <div class="tag2">
-                                <div class="cooking">Smart TV</div>
+                                <a href="#" class="cooking">Smart TV</a>
                             </div>
                             <div class="tag2">
-                                <div class="cooking">Speaker</div>
+                                <a href="#" class="cooking">Speaker</a>
                             </div>
                         </div>
                         <div class="row">
                             <div class="tag2">
-                                <div class="cooking">Tablet</div>
+                                <a href="#" class="cooking">Tablet</a>
                             </div>
                             <div class="tag2">
-                                <div class="cooking">Microwave</div>
+                                <a href="#" class="cooking">Microwave</a>
                             </div>
                             <div class="tag2">
-                                <div class="cooking">Samsung</div>
+                                <a href="#" class="cooking">Samsung</a>
                             </div>
                         </div>
                     </div>
