--- a/views/Details/details.html
+++ b/views/Details/details.html
@@ -49,7 +49,7 @@
                 <div class="frame-18">
                     <input class="search-for-anything" type="text" placeholder="Search for anything...">
                     <div>
-                        <img class="icon_pesquisa" src="lupa.png" width="20" height="20">
+                        <img class="icon_pesquisa" src="image/lupa.png" width="20" height="20">
                     </div>
                 </div>
                 <div class="icons">
