--- a/views/Login/login.css
+++ b/views/Login/login.css
@@ -1505,7 +1505,7 @@
 }
 .olho_fechado {
     cursor: pointer;
-    background-image: url(visivel.png);
+    background-image: url(image/visivel.png);
     background-repeat: no-repeat;
     background-size: cover;
     width: 15px;
@@ -1513,7 +1513,7 @@
 }
 .olho_aberto {
   cursor: pointer;
-  background-image: url(olho.png);
+  background-image: url(image/olho.png);
   background-repeat: no-repeat;
   background-size: cover;
   width: 15px;
