--- a/views/shopingCard/shopingCard.html
+++ b/views/shopingCard/shopingCard.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LOGIN</title>
-    <link rel="stylesheet" href="login.css">
+    <title>SHOPING CARD</title>
+    <link rel="stylesheet" href="shopingCard.css">
 </head>
+
 <body>
-    <div class="_16-sign-in">
+    <div class="_13-shopping-card">
         <div class="navigation">
             <div class="top-nav">
                 <div class="welcome-to-clicon-online-e-commerce-store">
@@ -18,12 +19,11 @@
                     <div class="follow-us">
                         <div class="follow-us2">Follow us:</div>
                         <div class="social-icon">
-                            <img class="twitter" src="twitter0.svg" />
-                            <a href="https://www.facebook.com/?locale=pt_BR"><img class="facebook" src="image/facebook.png" /></a>
-                            <img class="pinterest" src="pinterest0.svg" />
-                            <img class="reddit" src="reddit0.svg" />
-                            <img class="youtube" src="youtube0.svg" />
-                            <img class="instagram" src="instagram0.svg" />
+                            <a href="https://x.com/?lang=pt-br"><img class="twitter" src="image/twitter.png" /></a>
+                            <a href="https://pt-br.facebook.com/"><img class="facebook" src="image/facebook.png" /></a>
+                            <a href="https://br.pinterest.com/"><img class="pinterest" src="image/pinterest.png" /></a>
+                            <a href="https://www.youtube.com/"><img class="youtube" src="image/youtube.png" /></a>
+                            <a href="https://www.instagram.com/"><img class="instagram" src="image/instagram.png" /></a>
                         </div>
                     </div>
                 </div>
@@ -36,15 +36,12 @@
                 <div class="frame-18">
                     <input class="search-for-anything" type="text" placeholder="Search for anything...">
                     <div>
-                        <img class="icon_pesquisa" src="image/lupa.png" width="20" height="20">
+                        <img src="image/lupa.png" class="pesquisa" width="20" height="20">
                     </div>
                 </div>
                 <div class="icons">
                     <div class="shopping-cart-simple">
-                        <img class="vector" src="vector0.svg" />
-                        <img class="vector2" src="vector1.svg" />
-                        <img class="vector3" src="vector2.svg" />
-                        <img class="vector4" src="vector3.svg" />
+                        <img src="image/carrinho.png" />
                         <div class="frame-182">
                             <div class="_2">2</div>
                         </div>
@@ -87,58 +84,10 @@
         <div class="breadcrumb">
             <div class="breadcumb">
                 <img class="regular-house" src="regular-house0.svg" />
-                <a href="#" class="home">Home</a>
+                <div class="home">Home</div>
                 <img class="regular-caret-right" src="regular-caret-right0.svg" />
-                <a href="#" class="shop-grid">User Account</a>
-                <img class="regular-caret-right2" src="regular-caret-right1.svg" />
-                <a href="#" class="behicle-accessories">Sign In</a>
+                <div class="behicle-accessories">Shoping Card</div>
             </div>
-        </div>
-        <div class="frame-395">
-            <form class="login">
-                <div class="bg"></div>
-                <div class="from">
-                    <div class="order-id">
-                        <label class="email-address">Email Address</label>
-                        <input class="input-field" type="email" required>
-                    </div>
-                    <div class="order-id">
-                        <div class="box_olho">
-                            <label class="password">Password</label>
-                            <span id="olho" class="olho_aberto" onclick="mudarIcone()"></span>
-                        </div>
-                        <input id="input_senha" class="input-field" type="password" required>
-                    </div>
-                </div>
-                <div>
-                    <button class="button2">Sign in</button>
-                </div>
-                <div class="or-login-with">
-                    <div class="don-t-have-account">
-                        <div class="line-20"></div>
-                        <div class="label3">
-                            <div class="or">or</div>
-                        </div>
-                    </div>
-                    <div class="login-register-with">
-                        <a href="#" class="login-with-google">Login with Google</a>
-                        <img class="google" src="google0.png" />
-                    </div>
-                    <div class="login-register-with">
-                        <a href="#" class="login-with-apple">Login with Apple</a>
-                        <img class="apple" src="apple0.svg" />
-                    </div>
-                </div>
-                <div class="line-29"></div>
-                <div class="tab">
-                    <div class="tab2">
-                        <a href="#" class="sign-in">Sign In</a>
-                    </div>
-                    <div class="tab3">
-                        <a href="#" class="sign-in2">Sign Up</a>
-                    </div>
-                </div>
-            </form>
         </div>
         <div class="footer">
             <div class="footer2">
@@ -180,9 +129,9 @@
                         <div class="footer-links">
                             <a href="#" class="electronics">TV &amp; Homes</a>
                         </div>
-                        <div class="button3">
+                        <div class="button2">
                             <a href="#" class="browse-all-product">Browse All Product</a>
-                            <img class="regular-arrow-right2" src="regular-arrow-right1.svg" />
+                            <img class="regular-arrow-right" src="regular-arrow-right0.svg" />
                         </div>
                     </div>
                 </div>
@@ -294,7 +243,116 @@
                 </div>
             </div>
         </div>
+        <div class="shoping-card">
+            <div class="heading">
+                <div class="shopping-card">Shopping Card</div>
+            </div>
+            <div class="sub-heading">
+                <div class="products">Products</div>
+                <div class="price">Price</div>
+                <div class="quantity">Quantity</div>
+                <div class="sub-total">Sub-Total</div>
+            </div>
+            <div class="products2">
+                <div class="product">
+                    <div class="product2">
+                        <img class="regular-x-circle" src="regular-x-circle0.svg" />
+                        <img class="image" src="image0.png" />
+                        <div class="_4-k-uhd-led-smart-tv-with-chromecast-built-in">
+                            4K UHD LED Smart TV with Chromecast Built-in
+                        </div>
+                    </div>
+                    <div class="frame-409">
+                        <div class="_99">$99</div>
+                        <div class="_70">$70</div>
+                    </div>
+                    <div class="quantity2">
+                        <div class="button3">
+                            <img class="duotone-minus" src="duotone-minus0.svg" />
+                            <div class="_01">01</div>
+                            <img class="duotone-plus" src="duotone-plus0.svg" />
+                        </div>
+                    </div>
+                    <div class="_702">$70</div>
+                </div>
+                <div class="product">
+                    <div class="product2">
+                        <img class="regular-x-circle2" src="regular-x-circle1.svg" />
+                        <img class="image" src="image1.png" />
+                        <div class="wired-over-ear-gaming-headphones-with-usb">
+                            Wired Over-Ear Gaming Headphones with USB
+                        </div>
+                    </div>
+                    <div class="_250">$250</div>
+                    <div class="quantity2">
+                        <div class="button3">
+                            <img class="duotone-minus2" src="duotone-minus1.svg" />
+                            <div class="_03">03</div>
+                            <img class="duotone-plus2" src="duotone-plus1.svg" />
+                        </div>
+                    </div>
+                    <div class="_2502">$250</div>
+                </div>
+            </div>
+            <div class="line-25"></div>
+            <div class="button4">
+                <div class="button5">
+                    <img class="regular-arrow-left" src="regular-arrow-left0.svg" />
+                    <div class="label2">Return to Shop</div>
+                </div>
+                <div class="button5">
+                    <div class="label2">Update cart</div>
+                </div>
+            </div>
+        </div>
+        <div class="card-total">
+            <div class="heading">
+                <div class="card-totals">Card Totals</div>
+            </div>
+            <div class="total">
+                <div class="content">
+                    <div class="frame-404">
+                        <div class="sub-total2">Sub-total</div>
+                        <div class="_320">$320</div>
+                    </div>
+                    <div class="frame-405">
+                        <div class="shipping">Shipping</div>
+                        <div class="free">Free</div>
+                    </div>
+                    <div class="frame-406">
+                        <div class="discount">Discount</div>
+                        <div class="_24">$24</div>
+                    </div>
+                    <div class="frame-407">
+                        <div class="tax">Tax</div>
+                        <div class="_61-99">$61.99</div>
+                    </div>
+                </div>
+                <div class="line-26"></div>
+                <div class="frame-408">
+                    <div class="total2">Total</div>
+                    <div class="_357-99-usd">$357.99 USD</div>
+                </div>
+            </div>
+            <div class="button6">
+                <div class="label3">Proceed to Checkout</div>
+                <img class="regular-arrow-right2" src="regular-arrow-right1.svg" />
+            </div>
+        </div>
+        <div class="coupone-code">
+            <div class="heading2">
+                <div class="coupon-code">Coupon Code</div>
+            </div>
+            <div class="apply-coupone">
+                <div class="input-field">
+                    <div class="email-address">Email address</div>
+                </div>
+                <div class="button7">
+                    <div class="label4">Apply Coupon</div>
+                </div>
+            </div>
+        </div>
     </div>
-    <script src="login.js"></script>
 </body>
+
 </html>
