--- a/views/home.html
+++ b/views/home.html
@@ -154,7 +154,7 @@
                   </div>
                 </div>
                 <div class="button3">
-                  <div class="label3">Shop Now</div>
+                  <div class="label3">Compre Agora</div>
                   <img class="regular-arrow-right2" src="regular-arrow-right1.svg" />
                 </div>
               </div>
@@ -167,15 +167,15 @@
               <div class="widget3">
                 <img class="image-5" src="image-50.png" />
                 <div class="badge">
-                  <div class="_29-off">29% OFF</div>
+                  <div class="_29-off">29% Desconto</div>
                 </div>
                 <div class="content3">
                   <div class="info">
                     <div class="summer-sales">Summer Sales</div>
-                    <div class="new-google-pixel-6-pro">New Google Pixel 6 Pro</div>
+                    <div class="new-google-pixel-6-pro">Novo Google Pixel 6 Pro</div>
                   </div>
                   <div class="button4">
-                    <div class="label4">Shop Now</div>
+                    <div class="label4">Compre Agora</div>
                     <img
                       class="regular-arrow-right3"
                       src="regular-arrow-right2.svg"
@@ -205,24 +205,24 @@
             <div class="feature">
               <img class="duotone-package" src="duotone-package0.svg" />
               <div class="info3">
-                <div class="fasted-delivery">Fasted Delivery</div>
-                <div class="delivery-in-24-h">Delivery in 24/H</div>
+                <div class="fasted-delivery">Entrega mais rápida</div>
+                <div class="delivery-in-24-h">Entrega em 24 horas</div>
               </div>
             </div>
             <div class="line-2"></div>
             <div class="feature">
               <img class="duotone-trophy" src="duotone-trophy0.svg" />
               <div class="info3">
-                <div class="_24-hours-return">24 Hours Return</div>
-                <div class="_100-money-back-guarantee">100% money-back guarantee</div>
+                <div class="_24-hours-return">24 de devolução</div>
+                <div class="_100-money-back-guarantee">garantia de retorno de 100% do valor</div>
               </div>
             </div>
             <div class="line-4"></div>
             <div class="feature">
               <img class="duotone-credit-card" src="duotone-credit-card0.svg" />
               <div class="info3">
-                <div class="secure-payment">Secure Payment</div>
-                <div class="your-money-is-safe">Your money is safe</div>
+                <div class="secure-payment">Pagamento Seguro</div>
+                <div class="your-money-is-safe">Seu dinheiro esta a salvo</div>
               </div>
             </div>
             <div class="line-5"></div>
@@ -238,9 +238,9 @@
         <div class="today-best-deals">
           <div class="heading2">
             <div class="content5">
-              <div class="best-deals">Best Deals</div>
+              <div class="best-deals">Melhor oferta</div>
               <div class="deals-ends-in">
-                <div class="deals-ends-in2">Deals ends in</div>
+                <div class="deals-ends-in2">Oferta acaba em</div>
                 <div class="time">
                   <div class="_16-d">16d</div>
                   <div class="div">:</div>
@@ -253,7 +253,7 @@
               </div>
             </div>
             <div class="button5">
-              <div class="browse-all-product">Browse All Product</div>
+              <div class="browse-all-product">Navegar por todos os produtos</div>
               <img class="regular-arrow-right5" src="regular-arrow-right4.svg" />
             </div>
           </div>
@@ -1471,19 +1471,19 @@
                   <div class="electronics2">Customer Help</div>
                 </div>
                 <div class="footer-links">
-                  <div class="electronics2">About Us</div>
+                  <div class="electronics2"></div>
                 </div>
               </div>
             </div>
             <div class="quick-links3">
-              <div class="download-a-pp">Download APp</div>
+              <div class="download-a-pp">Baixar App</div>
               <div class="links">
                 <div class="mobile-app">
                   <div class="icon-google-play-1">
                     <img class="group3" src="group2.svg" />
                   </div>
                   <div class="info3">
-                    <div class="get-it-now">Get it now</div>
+                    <div class="get-it-now">Pegue agora</div>
                     <div class="google-play">Google Play</div>
                   </div>
                 </div>
@@ -1492,7 +1492,7 @@
                     <img class="group4" src="group3.svg" />
                   </div>
                   <div class="info3">
-                    <div class="get-it-now">Get it now</div>
+                    <div class="get-it-now">Pegue agora</div>
                     <div class="app-store">App Store</div>
                   </div>
                 </div>
@@ -1512,7 +1512,7 @@
                     <div class="cooking">TV</div>
                   </div>
                   <div class="tag2">
-                    <div class="cooking">Asus Laptops</div>
+                    <div class="cooking">Laptop Asus</div>
                   </div>
                 </div>
                 <div class="row3">
@@ -1542,7 +1542,7 @@
                     <div class="cooking">Tablet</div>
                   </div>
                   <div class="tag2">
-                    <div class="cooking">Microwave</div>
+                    <div class="cooking">Microondas</div>
                   </div>
                   <div class="tag2">
                     <div class="cooking">Samsung</div>
