--- a/views/Details/produto.html
+++ b/views/Details/produto.html
@@ -112,15 +112,15 @@
         </div>
         <div class="product-detail">
           <div class="product-preview">
-            <img class="main-image" src="main-image0.png" />
+            <img class="main-image" src="/views/Details/img/NOT.png" />
             <div class="images">
               <div class="photo">
-                <img class="_01" src="_010.png" />
-                <img class="_05" src="_050.png" />
-                <img class="_03" src="_030.png" />
-                <img class="_04" src="_040.png" />
-                <img class="_02" src="_020.png" />
-                <img class="_06" src="_060.png" />
+                <img class="_01" src="/views/Details/img/Produt1.png" />
+                <img class="_05" src="/views/Details/img/PRODUT2.png" />
+                <img class="_03" src="/views/Details/img/PRODUT3.png" />
+                <img class="_04" src="/views/Details/img/PRODUT4.png" />
+                <img class="_02" src="/views/Details/img/PRODUT5.png" />
+                <img class="_06" src="/views/Details/img/PRODUT6.png" />
               </div>
               <div class="arrow">
                 <div class="arrow-button">
